--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,8 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  flex-direction: row;
 }
 
 .icon {
@@ -33,6 +35,20 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 16px;
+}
+
+.header {
+  font-size: 18px;
+  font-weight: bold;
+  margin-top: 16px;
+  margin-bottom: 8px;
+}
+
+.text {
+  font-size: 14px;
+  margin-bottom: 12px;
+  text-align: justify;
 }
 
 .close-button {
@@ -48,12 +64,14 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  margin: 16px;
 }
 
 button {
   cursor: pointer;
   padding: 8px 16px;
   border-radius: 8px;
+  margin-bottom: 16px;
 }
 
 button.continue {
